--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
       - WEB_CONCURRENCY=1
       - HISTFILE=/usr/src/app/.dockerdev/.bash_history
       - MALLOC_ARENA_MAX=2
+      - REDIS_URL_CACHING=redis://redis:6379/0
     volumes:
       - .:/usr/src/app/:cached
       - bundle:/usr/local/bundle
@@ -31,6 +32,7 @@ services:
       - packs:/usr/src/app/public/packs
     depends_on:
       - db
+      - redis
   webpacker:
     build: .
     image: rails-on-docker:1.3.0
@@ -47,10 +49,17 @@ services:
       - bundle:/usr/local/bundle
       - node_modules:/usr/src/app/node_modules
       - packs:/usr/src/app/public/packs
-
+  redis:
+    image: 'redis:5-alpine'
+    command: redis-server
+    ports:
+      - '6379:6379'
+    volumes:
+      - 'redis:/data'
 volumes:
   bundle:
   db_data:
   node_modules:
   rails_cache:
   packs:
+  redis:  
