--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,7 @@ services:
       - MALLOC_ARENA_MAX=2
       - REDIS_URL_CACHING=redis://redis:6379/0
       - REDIS_URL_SIDEKIQ=redis://redis:6379/1
+      - REDIS_URL=redis://redis:6379/1
     volumes:
       - .:/usr/src/app/:cached
       - bundle:/usr/local/bundle
@@ -51,12 +52,14 @@ services:
       - node_modules:/usr/src/app/node_modules
       - packs:/usr/src/app/public/packs
   redis:
-    image: 'redis:5-alpine'
-    command: redis-server
-    ports:
-      - '6379:6379'
-    volumes:
-      - 'redis:/data'
+    image: redis:latest
+    command: ["redis-server", "--bind", "redis", "--port", "6379"]
+    #image: 'redis:5-alpine'
+    #command: redis-server
+    #ports:
+    #  - '6379:6379'
+    #volumes:
+    #  - 'redis:/data'
   sidekiq:
     depends_on:
       - 'db'
