--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,10 @@ yarn-debug.log*
 
 /config/master.key
 .DS_Store
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
